--- a/orchis-admin/src/main/resources/application.yml
+++ b/orchis-admin/src/main/resources/application.yml
@@ -58,6 +58,10 @@ mybatis-plus:
     cache-enabled: false
     call-setters-on-nulls: true
     jdbc-type-for-null: 'null'
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
+
 
 
 renren:
